# interview-face-mapper

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt
scripts/: share-published-job.sh
src/interview_mapper/: __init__.py  cli.py  correlate.py  export.py  face_sheet.py  faces.py  intro_clips.py  label_ui.py  mediapipe_models.py  pipeline.py  publish.py  screengrab.py  speakers.py  speech_names.py  upload_stream.py  video_io.py  web_app.py
