[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-face-mapper"
version = "0.1.0"
description = "Map speaker names to faces in multi-person interview videos for lower-third production."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "imageio-ffmpeg>=0.5.0",
    "mediapipe>=0.10.9",
    "resemblyzer>=0.1.4",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "click>=8.1.0",
    "Pillow>=10.0.0",
    "faster-whisper>=1.0.0",
]

[project.scripts]
interview-mapper = "interview_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
